--- a/index.html
+++ b/index.html
@@ -816,6 +816,7 @@ section {
     <p class="hero-subtitle">He claims. He trades. He never sleeps.<br>The first memecoin that market-makes itself.</p>
     <div class="hero-cta">
       <a href="#" class="btn-primary">BUY ON PUMP.FUN</a>
+      <a href="https://x.com/marketmake23200" target="_blank" class="btn-secondary">TWITTER / X →</a>
       <a href="#mechanism" class="btn-secondary">HOW IT WORKS →</a>
     </div>
   </div>
@@ -961,8 +962,7 @@ section {
   <div class="footer-skull">💀</div>
   <div class="footer-links">
     <a href="#">PUMP.FUN</a>
-    <a href="#">TWITTER</a>
-    <a href="#">TELEGRAM</a>
+    <a href="https://x.com/marketmake23200" target="_blank">TWITTER</a>
     <a href="#">DEXSCREENER</a>
   </div>
   <p class="footer-disclaimer">$MM is a memecoin with no intrinsic value or expectation of financial return. The Marketmaker is a fictional character. This is not financial advice. Trade at your own risk. The Marketmaker is always watching.</p>
